--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,10 +1,10 @@
-@(title: String)(content: Html)
+@()(content: Html)(implicit l: Lang)
 
 <!DOCTYPE html>
 
 <html>
     <head>
-        <title>@title</title>
+        <title>@Messages("translated_title")</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
